@@ -2,6 +2,7 @@
     * Added Comparator block
     * Render flowers in flower pots
     * Cloud height is now relative to the scene origin
+    * Stone wall sections with a torch above render as corner sections
 
 1.1.5 - 2013-02-26
     * Added parallel projection (TOGoS)
